# TripPlannerBot

./: .gitignore  README.md  commit_it.sh  grab_new_data.sh  pyproject.toml  requirements.txt
src/bot/: main.py
src/bot/app/: handlers.py  keyboards.py
src/datasets/: compiled_cafes_nso.csv  compiled_toy_cafes.csv  compiled_toy_entertainments.csv  compiled_toy_hotels.csv  dataset_cafes.csv  dataset_entertainments.csv  dataset_hotels.csv  dataset_nature.csv  dataset_streets.csv  production_cafes.csv  production_hotels.csv  toy_cafes.csv  toy_entertainments.csv  toy_hotels.csv
src/eval_utils/: evalAI.py  testsetGenerator.py  testset_only_route.csv
src/eval_utils/eval_results/: eval_testset_by_quest_data_deepseek-chat_free.csv  eval_testset_by_quest_divide_deepseek_qwen.csv  eval_testset_by_quest_divide_mixtral.csv  eval_testset_by_quest_gpt-4o-mini.csv  eval_testset_by_quest_gpt4_coord.csv  eval_testset_by_quest_llama-3.1-70b-instruct.csv  (+13 more)
src/geoloc_utils/: getCoordinates.py  getDistricts.py  ragGeocoder.py
src/logs/: tg_logs_2025-04-05.txt  tg_logs_2025-04-14.txt
src/parsing_utils/: cafesParser.py  dataPreprocess.py  entertainmentsParser.py  hotelsParser.py  streetsParser.py
src/pipeplines/: finalTrainPipelin history.ipynb  finalTrainPipeline.ipynb  ragBaseline_v0.py  ragPipeline_tgbot.py  ragPipeline_v1.py  ragPipeline_v2.py
src/production_data/: production_cafes_coord.csv  production_cafes_districts.csv  production_ent.csv  production_ent_coord.csv  production_ent_districts.csv  production_hotels_coord.csv  production_hotels_districts.csv
